--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ click==8.1.3
 colorama==0.4.6
 Flask==2.2.2
 flask-restx==1.0.3
+Flask-SQLAlchemy==3.0.2
+greenlet==2.0.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -13,5 +15,6 @@ jsonschema==4.17.3
 MarkupSafe==2.1.1
 pyrsistent==0.19.2
 pytz==2022.6
+SQLAlchemy==1.4.44
 urllib3==1.26.13
 Werkzeug==2.2.2
